--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0",
     "magento/framework": "100.1.*",
-    "diglin/innocard_magento2": "dev-master"
+    "diglin/innocard_magento2": "2.*"
   },
   "version": "1.0.0",
   "license": "OSL-3.0",
