--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
   "type": "magento2-module",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0",
-    "magento/framework": "100.1.*",
+    "magento/framework": "100.1.*|101.0.*",
     "diglin/innocard_magento2": "dev-master"
   },
-  "version": "1.0.0",
+  "version": "1.0.4",
   "license": "OSL-3.0",
   "authors": [
     {
