--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0|~7.1",
     "magento/framework": "100.1.*|101.0.*",
-    "lyranetwork/module-innopay": "dev-master"
+    "lyranetwork/module-innopay": "2.1.*"
   },
   "version": "1.0.4",
   "license": "OSL-3.0",
