--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,9 @@
   "type": "magento2-module",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0|~7.1",
-    "magento/framework": "100.1.*|101.0.*",
-    "lyranetwork/module-innopay": "2.1.*"
+    "lyranetwork/module-innopay": "^2.1.0|^2.2.0"
   },
-  "version": "1.0.4",
+  "version": "1.0.5",
   "license": "OSL-3.0",
   "authors": [
     {
